SQL Marathon Day1 done

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-
 /Special_topics/Dynamic_Programming_1/Part_1
 /Special_topics/Dynamic_Programming_1/Part_2
+
+
+/SQL_Marathon/Day1/0_Basic_SQL/Exaple_task
+/SQL_Marathon/Day1/0_Basic_SQL/Other_tasks
+
+/SQL_Marathon/Day1/1_Aggregate_functions/CASE_exaple_task
+/SQL_Marathon/Day1/1_Aggregate_functions/First_tasks
+/SQL_Marathon/Day1/1_Aggregate_functions/Second_tasks
+
+/SQL_Marathon/Day1/2_string_functions/concat_upper_lower_like_substr
+/SQL_Marathon/Day1/2_string_functions/group_concat
+/SQL_Marathon/Day1/2_string_functions/regexp
