Day3 plan written

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,6 @@
 /SQL_Marathon/Day1/2_string_functions/regexp
 
 
-
 /SQL_Marathon/Day2/readme.md
 
 
@@ -33,6 +32,8 @@
 
 /SQL_Marathon/Day2/2_Str_functions
 
+
+/SQL_Marathon/Day3/readme.md
 
 
 /SQL_Marathon/Day3/0_cte_union/Example_task
