--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 
 
 /SQL_Marathon/Day2/readme.md
-
+/docs/day2.html
 
 /SQL_Marathon/Day2/0_Joins/Example_tasks
 /SQL_Marathon/Day2/0_Joins/Other_Tasks
@@ -19,6 +19,7 @@
 
 
 /SQL_Marathon/Day3/readme.md
+/docs/day3.html
 
 
 /SQL_Marathon/Day3/0_cte_union/Example_task
